feat(acls): introduce new ACL rewrite (#1472)